agregue link de documentacion en index page

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -23,7 +23,11 @@
   </div>
   <div class="row buttons">
     <div class="col-md-6 button">
-      <a class="text-center swagger btn" href="" target="_blank"></a>
+      <a
+        class="text-center swagger btn"
+        href="https://taller-ahorros.herokuapp.com/api/docs"
+        target="_blank"
+      ></a>
     </div>
     <div class="col-md-6 button">
       <a class="react btn" href="" target="_blank"></a>
