--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -12,9 +12,10 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Taller Ahorros</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='index.css')
+
     }}" />
   </head>
   <body>
